# agentcode

./: README.md
.github/workflows/: ci.yml  prepare-release.yml  publish-cargo.yml  publish-npm.yml  publish-pypi.yml  publish.yml
core-rs/: Cargo.toml
core-rs/src/: budgeter.rs  indexer.rs  lib.rs  main.rs  map.rs  mcp.rs  models.rs  walker.rs
wrapper-js/: .gitignore  README.md  package-lock.json  package.json
wrapper-js/scripts/: assert-release-ready.mjs  check-pack.mjs  clean-binaries.mjs  release-check.mjs  stage-binaries.mjs  targets.mjs  verify-binaries.mjs
wrapper-js/src/: index.js
wrapper-js/test/: index.test.js  verify.js
wrapper-js/test/fixtures/: agentcode-stub.sh
wrapper-py/: .gitignore  README.md  hatch_build.py  pyproject.toml  test_verify.py
wrapper-py/scripts/: check_wheel.py  stage_binaries.py  verify_binaries.py
wrapper-py/src/agentcode/: cli.py
wrapper-py/tests/: test_cli.py
